--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,6 @@
+image: 
+  file: .gitpod.Dockerfile
+
 tasks:
   - init: npm install && go get && go build ./... && go test ./... && make
     command: go run
